# AI_Engineering

./: .gitignore  README.md  preference.md  pyproject.toml
project1/: .env_example  Dockerfile  README.md  TASKS.md  critic_prompt.txt  docker_agent.py  docker_tool.py  model_prompt.txt  prompt_notes.txt  query.txt  router_prompt.txt  run_evals.py  summarize_prompt.txt  viz_prompt.txt
project1/evals/: results_test_gemini.json  results_test_openai.json  results_train_gemini.json  results_train_openai.json  test.csv  train.csv
project2/: .env_example  README.md  TASKS.md  answer.py  build_cache.py  corpus.json  critic_prompt.txt  documentation.md  eval_keyword.py  eval_rerank.py  keyword_search.py  learning.txt  model_prompt.txt  query.txt  rerank.py  rerank_search.py  retrieval.py  rewrite_prompt.txt  run_evals.py  search_agent.py  search_tool.py  summarize_prompt.txt  tasks.md  vision_extract_prompt.txt  vision_qa_prompt.txt
project2/Testing/: 1.txt
project2/evals/: easy.csv  hard.csv  results_easy_keyword.json  results_easy_rerank.json  results_hard_keyword.json  results_hard_rerank.json
