[project]
name = "ai-engineering"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=1.2.13",
    "langchain-google-genai>=4.2.1",
    "langchain-openai>=0.3.0",
    "docker>=6.0.0",
    "python-dotenv>=1.0.0",
    "pypdf>=6.9.2",
]
